# pyvenvwrapper_vscode_template

./: .actrc  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  act_container.env  activate_venv.sh  create_venv.sh  mypy.ini  pyproject.code-workspace  pyproject.toml  requirements-dev.txt  runonsave.sh  setup.cfg  tox.ini
.github/workflows/: pre-commit.yml  pylint.yml  tox.yml
src/: main.py
tests/: test_main.py
workflows/: pylint.yml
