[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools >= 35.0.2",
  "setuptools_scm >= 2.0.0, <3",
]

[tool.interrogate]
fail-under = 100
ignore-init-method = true

[tool.black]
line-length = 88
target-version = ['py37', 'py38']

[tool.coverage.run]
command_line = "-m pytest"
omit = [
  "*/tests/*",
]

[tool.coverage.report]
# fail_under = 90.0
ignore_errors = true
omit = ["tests/*"]
show_missing = true
skip_empty = true
