[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools >= 35.0.2",
  "setuptools_scm >= 2.0.0, <3",
]

[tool.interrogate]
fail-under = 100
ignore-init-method = true

[tool.black]
line-length = 88
target-version = ['py37', 'py38']

[tool.coverage.run]
command_line = "-m pytest tests -vv"
include = ["src/*"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
]
fail_under = 100.0
ignore_errors = true
include = ["src/*"]
omit = ["tests/*"]
show_missing = true
skip_empty = true
